# Pipeline-pessoal

./: README.md  main.py  pyproject.toml
config/: model.yml  paths.yml
src/: __main__.py  extract.py  load.py  transform.py
